hw3/y.output
   0  $accept : program $end

   1  program : external_declaration
   2          | program external_declaration

   3  external_declaration : declaration
   4                       | function_definition

   5  declaration : type_list init_declarator_list ';'

   6  stmt : compound_stmt
   7       | expression_stmt
   8       | selection_stmt
   9       | iteration_stmt
  10       | jump_stmt

  11  $$1 :

  12  function_definition : type_list declarator $$1 compound_stmt
  13                      | declarator compound_stmt
  14                      | type_list declarator declaration_list compound_stmt
  15                      | declarator declaration_list compound_stmt

  16  declaration_list : declaration_list declaration
  17                   | declaration

  18  switch_clauses : '{' switch_clause '}'
  19                 | '{' '}'

  20  switch_clause : switch_clause stmt
  21                | switch_clause labeled_stmt
  22                | labeled_stmt

  23  labeled_stmt : CASE expression ':'
  24               | DEFAULT ':'

  25  compound_stmt : '{' '}'
  26                | '{' compound_stmt_contents '}'

  27  compound_stmt_contents : declaration
  28                         | stmt
  29                         | compound_stmt_contents declaration
  30                         | compound_stmt_contents stmt

  31  expression_stmt : ';'
  32                  | expression ';'

  33  selection_stmt : IF '(' expression ')' compound_stmt
  34                 | IF '(' expression ')' compound_stmt ELSE compound_stmt
  35                 | SWITCH '(' expression ')' switch_clauses

  36  expression_in_for : expression
  37                    |

  38  iteration_stmt : WHILE '(' expression ')' stmt
  39                 | DO stmt WHILE '(' expression ')' ';'
  40                 | FOR '(' expression_in_for ';' expression_in_for ';' expression_in_for ')' stmt

  41  jump_stmt : CONTINUE ';'
  42            | BREAK ';'
  43            | RETURN ';'
  44            | RETURN expression ';'

  45  type_list : type_list type
  46            | type

  47  type : CONST
  48       | SIGNED
  49       | UNSIGNED
  50       | SHORT
  51       | LONG
  52       | VOID
  53       | INT
  54       | CHAR
  55       | FLOAT
  56       | DOUBLE
  57       | CHAR4

  58  init_declarator_list : init_declarator_list ',' init_declarator
  59                       | init_declarator

  60  init_declarator : declarator
  61                  | declarator '=' initializer

  62  declarator : direct_declarator

  63  direct_declarator : IDENT
  64                    | pointer IDENT
  65                    | direct_declarator '[' expression ']'
  66                    | direct_declarator '[' ']'
  67                    | '(' declarator ')'
  68                    | IDENT '(' parameter_list ')'
  69                    | IDENT '(' identifier_list ')'
  70                    | IDENT '(' ')'

  71  parameter_list : parameter_declaration
  72                 | parameter_list ',' parameter_declaration

  73  parameter_declaration : type_list declarator
  74                        | type_list abstract_declarator
  75                        | type_list

  76  identifier_list : IDENT
  77                  | identifier_list ',' IDENT

  78  pointer : '*'
  79          | pointer '*'

  80  initializer : assignment_expression
  81              | '{' initializer_list '}'

  82  initializer_list : initializer
  83                   | initializer_list ',' initializer

  84  expression : assignment_expression
  85             | expression ',' assignment_expression

  86  assignment_expression : constant_expression
  87                        | cast_expression assignment_op assignment_expression

  88  assignment_op : '='

  89  constant_expression : conditional_expression

  90  conditional_expression : logical_or_expression
  91                         | logical_or_expression '?' expression ':' conditional_expression

  92  logical_or_expression : logical_and_expression
  93                        | logical_or_expression OR logical_and_expression

  94  logical_and_expression : inclusive_or_expression
  95                         | logical_and_expression AND inclusive_or_expression

  96  inclusive_or_expression : exclusive_or_expression
  97                          | inclusive_or_expression '|' exclusive_or_expression

  98  exclusive_or_expression : and_expression
  99                          | exclusive_or_expression '^' and_expression

 100  and_expression : equality_expression
 101                 | and_expression '&' equality_expression

 102  equality_expression : relational_expression
 103                      | equality_expression EQUALS relational_expression
 104                      | equality_expression NOT_EQUALS relational_expression

 105  relational_expression : shift_expression
 106                        | relational_expression '<' shift_expression
 107                        | relational_expression '>' shift_expression
 108                        | relational_expression LESS_OR_EQUAL shift_expression
 109                        | relational_expression GREATER_OR_EQUAL shift_expression

 110  shift_expression : additive_expression
 111                   | shift_expression LEFT_SHIFT additive_expression
 112                   | shift_expression RIGHT_SHIFT additive_expression

 113  additive_expression : multiplicative_expression
 114                      | additive_expression '+' multiplicative_expression
 115                      | additive_expression '-' multiplicative_expression

 116  multiplicative_expression : cast_expression
 117                            | multiplicative_expression '*' cast_expression
 118                            | multiplicative_expression '/' cast_expression
 119                            | multiplicative_expression '%' cast_expression

 120  cast_expression : unary_expression
 121                  | '(' type_name ')' cast_expression

 122  unary_expression : postfix_expression
 123                   | unary_op_list postfix_expression

 124  postfix_expression : primary_expression
 125                     | postfix_expression '(' ')'
 126                     | postfix_expression '(' argument_expression_list ')'
 127                     | postfix_expression INC
 128                     | postfix_expression DEC

 129  argument_expression_list : argument_expression
 130                           | argument_expression_list ',' argument_expression

 131  argument_expression : assignment_expression

 132  primary_expression : IDENT
 133                     | primary_expression '[' expression ']'
 134                     | INTEGER
 135                     | FLOATING
 136                     | STRING
 137                     | CHARACTER
 138                     | '(' expression ')'

 139  unary_op_list : unary_op_list unary_op
 140                | unary_op

 141  unary_op : '&'
 142           | '*'
 143           | '+'
 144           | '-'
 145           | '~'
 146           | '!'
 147           | INC
 148           | DEC

 149  type_name : type_list
 150            | type_list abstract_declarator

 151  abstract_declarator : pointer
 152                      | direct_abstract_declarator
 153                      | pointer direct_abstract_declarator

 154  direct_abstract_declarator : '(' abstract_declarator ')'
 155                             | '[' ']'
 156                             | '[' expression ']'
 157                             | direct_abstract_declarator '[' ']'
 158                             | direct_abstract_declarator '[' expression ']'
 159                             | '(' ')'
 160                             | '(' parameter_list ')'
 161                             | direct_abstract_declarator '(' ')'
 162                             | direct_abstract_declarator '(' parameter_list ')'

state 0
	$accept : . program $end  (0)

	IDENT  shift 1
	CONST  shift 2
	SIGNED  shift 3
	UNSIGNED  shift 4
	SHORT  shift 5
	LONG  shift 6
	VOID  shift 7
	INT  shift 8
	CHAR  shift 9
	FLOAT  shift 10
	DOUBLE  shift 11
	CHAR4  shift 12
	'*'  shift 13
	'('  shift 14
	.  error

	program  goto 15
	pointer  goto 16
	external_declaration  goto 17
	declaration  goto 18
	function_definition  goto 19
	direct_declarator  goto 20
	declarator  goto 21
	type  goto 22
	type_list  goto 23


state 1
	direct_declarator : IDENT .  (63)
	direct_declarator : IDENT . '(' parameter_list ')'  (68)
	direct_declarator : IDENT . '(' identifier_list ')'  (69)
	direct_declarator : IDENT . '(' ')'  (70)

	'('  shift 24
	CONST  reduce 63
	SIGNED  reduce 63
	UNSIGNED  reduce 63
	SHORT  reduce 63
	LONG  reduce 63
	VOID  reduce 63
	INT  reduce 63
	CHAR  reduce 63
	FLOAT  reduce 63
	DOUBLE  reduce 63
	CHAR4  reduce 63
	'='  reduce 63
	';'  reduce 63
	'{'  reduce 63
	')'  reduce 63
	','  reduce 63
	'['  reduce 63


state 2
	type : CONST .  (47)

	.  reduce 47


state 3
	type : SIGNED .  (48)

	.  reduce 48


state 4
	type : UNSIGNED .  (49)

	.  reduce 49


state 5
	type : SHORT .  (50)

	.  reduce 50


state 6
	type : LONG .  (51)

	.  reduce 51


state 7
	type : VOID .  (52)

	.  reduce 52


state 8
	type : INT .  (53)

	.  reduce 53


state 9
	type : CHAR .  (54)

	.  reduce 54


state 10
	type : FLOAT .  (55)

	.  reduce 55


state 11
	type : DOUBLE .  (56)

	.  reduce 56


state 12
	type : CHAR4 .  (57)

	.  reduce 57


state 13
	pointer : '*' .  (78)

	.  reduce 78


state 14
	direct_declarator : '(' . declarator ')'  (67)

	IDENT  shift 1
	'*'  shift 13
	'('  shift 14
	.  error

	pointer  goto 16
	direct_declarator  goto 20
	declarator  goto 25


state 15
	$accept : program . $end  (0)
	program : program . external_declaration  (2)

	$end  accept
	IDENT  shift 1
	CONST  shift 2
	SIGNED  shift 3
	UNSIGNED  shift 4
	SHORT  shift 5
	LONG  shift 6
	VOID  shift 7
	INT  shift 8
	CHAR  shift 9
	FLOAT  shift 10
	DOUBLE  shift 11
	CHAR4  shift 12
	'*'  shift 13
	'('  shift 14
	.  error

	pointer  goto 16
	external_declaration  goto 26
	declaration  goto 18
	function_definition  goto 19
	direct_declarator  goto 20
	declarator  goto 21
	type  goto 22
	type_list  goto 23


state 16
	direct_declarator : pointer . IDENT  (64)
	pointer : pointer . '*'  (79)

	IDENT  shift 27
	'*'  shift 28
	.  error


state 17
	program : external_declaration .  (1)

	.  reduce 1


state 18
	external_declaration : declaration .  (3)

	.  reduce 3


state 19
	external_declaration : function_definition .  (4)

	.  reduce 4


state 20
	declarator : direct_declarator .  (62)
	direct_declarator : direct_declarator . '[' expression ']'  (65)
	direct_declarator : direct_declarator . '[' ']'  (66)

	'['  shift 29
	CONST  reduce 62
	SIGNED  reduce 62
	UNSIGNED  reduce 62
	SHORT  reduce 62
	LONG  reduce 62
	VOID  reduce 62
	INT  reduce 62
	CHAR  reduce 62
	FLOAT  reduce 62
	DOUBLE  reduce 62
	CHAR4  reduce 62
	'='  reduce 62
	';'  reduce 62
	'{'  reduce 62
	')'  reduce 62
	','  reduce 62


state 21
	function_definition : declarator . compound_stmt  (13)
	function_definition : declarator . declaration_list compound_stmt  (15)

	CONST  shift 2
	SIGNED  shift 3
	UNSIGNED  shift 4
	SHORT  shift 5
	LONG  shift 6
	VOID  shift 7
	INT  shift 8
	CHAR  shift 9
	FLOAT  shift 10
	DOUBLE  shift 11
	CHAR4  shift 12
	'{'  shift 30
	.  error

	declaration  goto 31
	declaration_list  goto 32
	compound_stmt  goto 33
	type  goto 22
	type_list  goto 34


state 22
	type_list : type .  (46)

	.  reduce 46


state 23
	declaration : type_list . init_declarator_list ';'  (5)
	function_definition : type_list . declarator $$1 compound_stmt  (12)
	function_definition : type_list . declarator declaration_list compound_stmt  (14)
	type_list : type_list . type  (45)

	IDENT  shift 1
	CONST  shift 2
	SIGNED  shift 3
	UNSIGNED  shift 4
	SHORT  shift 5
	LONG  shift 6
	VOID  shift 7
	INT  shift 8
	CHAR  shift 9
	FLOAT  shift 10
	DOUBLE  shift 11
	CHAR4  shift 12
	'*'  shift 13
	'('  shift 14
	.  error

	pointer  goto 16
	init_declarator_list  goto 35
	init_declarator  goto 36
	direct_declarator  goto 20
	declarator  goto 37
	type  goto 38


state 24
	direct_declarator : IDENT '(' . parameter_list ')'  (68)
	direct_declarator : IDENT '(' . identifier_list ')'  (69)
	direct_declarator : IDENT '(' . ')'  (70)

	IDENT  shift 39
	CONST  shift 2
	SIGNED  shift 3
	UNSIGNED  shift 4
	SHORT  shift 5
	LONG  shift 6
	VOID  shift 7
	INT  shift 8
	CHAR  shift 9
	FLOAT  shift 10
	DOUBLE  shift 11
	CHAR4  shift 12
	')'  shift 40
	.  error

	type  goto 22
	type_list  goto 41
	parameter_list  goto 42
	identifier_list  goto 43
	parameter_declaration  goto 44


state 25
	direct_declarator : '(' declarator . ')'  (67)

	')'  shift 45
	.  error


state 26
	program : program external_declaration .  (2)

	.  reduce 2


state 27
	direct_declarator : pointer IDENT .  (64)

	.  reduce 64


state 28
	pointer : pointer '*' .  (79)

	.  reduce 79


state 29
	direct_declarator : direct_declarator '[' . expression ']'  (65)
	direct_declarator : direct_declarator '[' . ']'  (66)

	IDENT  shift 46
	INTEGER  shift 47
	FLOATING  shift 48
	CHARACTER  shift 49
	STRING  shift 50
	INC  shift 51
	DEC  shift 52
	'+'  shift 53
	'-'  shift 54
	'*'  shift 55
	'('  shift 56
	']'  shift 57
	'&'  shift 58
	'~'  shift 59
	'!'  shift 60
	.  error

	unary_op  goto 61
	expression  goto 62
	assignment_expression  goto 63
	constant_expression  goto 64
	conditional_expression  goto 65
	logical_or_expression  goto 66
	logical_and_expression  goto 67
	inclusive_or_expression  goto 68
	exclusive_or_expression  goto 69
	and_expression  goto 70
	equality_expression  goto 71
	relational_expression  goto 72
	shift_expression  goto 73
	additive_expression  goto 74
	multiplicative_expression  goto 75
	cast_expression  goto 76
	unary_expression  goto 77
	unary_op_list  goto 78
	postfix_expression  goto 79
	primary_expression  goto 80


state 30
	compound_stmt : '{' . '}'  (25)
	compound_stmt : '{' . compound_stmt_contents '}'  (26)

	IDENT  shift 46
	INTEGER  shift 47
	FLOATING  shift 48
	CHARACTER  shift 49
	STRING  shift 50
	INC  shift 51
	DEC  shift 52
	CONST  shift 2
	SIGNED  shift 3
	UNSIGNED  shift 4
	SHORT  shift 5
	LONG  shift 6
	VOID  shift 7
	INT  shift 8
	CHAR  shift 9
	FLOAT  shift 10
	DOUBLE  shift 11
	CHAR4  shift 12
	IF  shift 81
	SWITCH  shift 82
	DO  shift 83
	WHILE  shift 84
	FOR  shift 85
	RETURN  shift 86
	BREAK  shift 87
	CONTINUE  shift 88
	'+'  shift 53
	'-'  shift 54
	'*'  shift 55
	';'  shift 89
	'{'  shift 30
	'}'  shift 90
	'('  shift 56
	'&'  shift 58
	'~'  shift 59
	'!'  shift 60
	.  error

	unary_op  goto 61
	declaration  goto 91
	stmt  goto 92
	compound_stmt  goto 93
	expression_stmt  goto 94
	selection_stmt  goto 95
	iteration_stmt  goto 96
	jump_stmt  goto 97
	compound_stmt_contents  goto 98
	expression  goto 99
	assignment_expression  goto 63
	constant_expression  goto 64
	conditional_expression  goto 65
	logical_or_expression  goto 66
	logical_and_expression  goto 67
	inclusive_or_expression  goto 68
	exclusive_or_expression  goto 69
	and_expression  goto 70
	equality_expression  goto 71
	relational_expression  goto 72
	shift_expression  goto 73
	additive_expression  goto 74
	multiplicative_expression  goto 75
	cast_expression  goto 76
	unary_expression  goto 77
	unary_op_list  goto 78
	postfix_expression  goto 79
	primary_expression  goto 80
	type  goto 22
	type_list  goto 34


state 31
	declaration_list : declaration .  (17)

	.  reduce 17


state 32
	function_definition : declarator declaration_list . compound_stmt  (15)
	declaration_list : declaration_list . declaration  (16)

	CONST  shift 2
	SIGNED  shift 3
	UNSIGNED  shift 4
	SHORT  shift 5
	LONG  shift 6
	VOID  shift 7
	INT  shift 8
	CHAR  shift 9
	FLOAT  shift 10
	DOUBLE  shift 11
	CHAR4  shift 12
	'{'  shift 30
	.  error

	declaration  goto 100
	compound_stmt  goto 101
	type  goto 22
	type_list  goto 34


state 33
	function_definition : declarator compound_stmt .  (13)

	.  reduce 13


state 34
	declaration : type_list . init_declarator_list ';'  (5)
	type_list : type_list . type  (45)

	IDENT  shift 1
	CONST  shift 2
	SIGNED  shift 3
	UNSIGNED  shift 4
	SHORT  shift 5
	LONG  shift 6
	VOID  shift 7
	INT  shift 8
	CHAR  shift 9
	FLOAT  shift 10
	DOUBLE  shift 11
	CHAR4  shift 12
	'*'  shift 13
	'('  shift 14
	.  error

	pointer  goto 16
	init_declarator_list  goto 35
	init_declarator  goto 36
	direct_declarator  goto 20
	declarator  goto 102
	type  goto 38


state 35
	declaration : type_list init_declarator_list . ';'  (5)
	init_declarator_list : init_declarator_list . ',' init_declarator  (58)

	';'  shift 103
	','  shift 104
	.  error


state 36
	init_declarator_list : init_declarator .  (59)

	.  reduce 59


state 37
	function_definition : type_list declarator . $$1 compound_stmt  (12)
	function_definition : type_list declarator . declaration_list compound_stmt  (14)
	init_declarator : declarator .  (60)
	init_declarator : declarator . '=' initializer  (61)
	$$1 : .  (11)

	CONST  shift 2
	SIGNED  shift 3
	UNSIGNED  shift 4
	SHORT  shift 5
	LONG  shift 6
	VOID  shift 7
	INT  shift 8
	CHAR  shift 9
	FLOAT  shift 10
	DOUBLE  shift 11
	CHAR4  shift 12
	'='  shift 105
	';'  reduce 60
	'{'  reduce 11
	','  reduce 60

	declaration  goto 31
	declaration_list  goto 106
	type  goto 22
	type_list  goto 34
	$$1  goto 107


state 38
	type_list : type_list type .  (45)

	.  reduce 45


state 39
	identifier_list : IDENT .  (76)

	.  reduce 76


state 40
	direct_declarator : IDENT '(' ')' .  (70)

	.  reduce 70


state 41
	type_list : type_list . type  (45)
	parameter_declaration : type_list . declarator  (73)
	parameter_declaration : type_list . abstract_declarator  (74)
	parameter_declaration : type_list .  (75)

	IDENT  shift 1
	CONST  shift 2
	SIGNED  shift 3
	UNSIGNED  shift 4
	SHORT  shift 5
	LONG  shift 6
	VOID  shift 7
	INT  shift 8
	CHAR  shift 9
	FLOAT  shift 10
	DOUBLE  shift 11
	CHAR4  shift 12
	'*'  shift 13
	'('  shift 108
	'['  shift 109
	')'  reduce 75
	','  reduce 75

	pointer  goto 110
	direct_declarator  goto 20
	declarator  goto 111
	type  goto 38
	abstract_declarator  goto 112
	direct_abstract_declarator  goto 113


state 42
	direct_declarator : IDENT '(' parameter_list . ')'  (68)
	parameter_list : parameter_list . ',' parameter_declaration  (72)

	')'  shift 114
	','  shift 115
	.  error


state 43
	direct_declarator : IDENT '(' identifier_list . ')'  (69)
	identifier_list : identifier_list . ',' IDENT  (77)

	')'  shift 116
	','  shift 117
	.  error


state 44
	parameter_list : parameter_declaration .  (71)

	.  reduce 71


state 45
	direct_declarator : '(' declarator ')' .  (67)

	.  reduce 67


state 46
	primary_expression : IDENT .  (132)

	.  reduce 132


state 47
	primary_expression : INTEGER .  (134)

	.  reduce 134


state 48
	primary_expression : FLOATING .  (135)

	.  reduce 135


state 49
	primary_expression : CHARACTER .  (137)

	.  reduce 137


state 50
	primary_expression : STRING .  (136)

	.  reduce 136


state 51
	unary_op : INC .  (147)

	.  reduce 147


state 52
	unary_op : DEC .  (148)

	.  reduce 148


state 53
	unary_op : '+' .  (143)

	.  reduce 143


state 54
	unary_op : '-' .  (144)

	.  reduce 144


state 55
	unary_op : '*' .  (142)

	.  reduce 142


state 56
	cast_expression : '(' . type_name ')' cast_expression  (121)
	primary_expression : '(' . expression ')'  (138)

	IDENT  shift 46
	INTEGER  shift 47
	FLOATING  shift 48
	CHARACTER  shift 49
	STRING  shift 50
	INC  shift 51
	DEC  shift 52
	CONST  shift 2
	SIGNED  shift 3
	UNSIGNED  shift 4
	SHORT  shift 5
	LONG  shift 6
	VOID  shift 7
	INT  shift 8
	CHAR  shift 9
	FLOAT  shift 10
	DOUBLE  shift 11
	CHAR4  shift 12
	'+'  shift 53
	'-'  shift 54
	'*'  shift 55
	'('  shift 56
	'&'  shift 58
	'~'  shift 59
	'!'  shift 60
	.  error

	unary_op  goto 61
	expression  goto 118
	assignment_expression  goto 63
	constant_expression  goto 64
	conditional_expression  goto 65
	logical_or_expression  goto 66
	logical_and_expression  goto 67
	inclusive_or_expression  goto 68
	exclusive_or_expression  goto 69
	and_expression  goto 70
	equality_expression  goto 71
	relational_expression  goto 72
	shift_expression  goto 73
	additive_expression  goto 74
	multiplicative_expression  goto 75
	cast_expression  goto 76
	unary_expression  goto 77
	unary_op_list  goto 78
	postfix_expression  goto 79
	primary_expression  goto 80
	type  goto 22
	type_list  goto 119
	type_name  goto 120


state 57
	direct_declarator : direct_declarator '[' ']' .  (66)

	.  reduce 66


state 58
	unary_op : '&' .  (141)

	.  reduce 141


state 59
	unary_op : '~' .  (145)

	.  reduce 145


state 60
	unary_op : '!' .  (146)

	.  reduce 146


state 61
	unary_op_list : unary_op .  (140)

	.  reduce 140


state 62
	direct_declarator : direct_declarator '[' expression . ']'  (65)
	expression : expression . ',' assignment_expression  (85)

	','  shift 121
	']'  shift 122
	.  error


state 63
	expression : assignment_expression .  (84)

	.  reduce 84


state 64
	assignment_expression : constant_expression .  (86)

	.  reduce 86


state 65
	constant_expression : conditional_expression .  (89)

	.  reduce 89


state 66
	conditional_expression : logical_or_expression .  (90)
	conditional_expression : logical_or_expression . '?' expression ':' conditional_expression  (91)
	logical_or_expression : logical_or_expression . OR logical_and_expression  (93)

	OR  shift 123
	'?'  shift 124
	';'  reduce 90
	'}'  reduce 90
	':'  reduce 90
	')'  reduce 90
	','  reduce 90
	']'  reduce 90


state 67
	logical_or_expression : logical_and_expression .  (92)
	logical_and_expression : logical_and_expression . AND inclusive_or_expression  (95)

	AND  shift 125
	OR  reduce 92
	';'  reduce 92
	'}'  reduce 92
	':'  reduce 92
	')'  reduce 92
	','  reduce 92
	']'  reduce 92
	'?'  reduce 92


state 68
	logical_and_expression : inclusive_or_expression .  (94)
	inclusive_or_expression : inclusive_or_expression . '|' exclusive_or_expression  (97)

	'|'  shift 126
	AND  reduce 94
	OR  reduce 94
	';'  reduce 94
	'}'  reduce 94
	':'  reduce 94
	')'  reduce 94
	','  reduce 94
	']'  reduce 94
	'?'  reduce 94


state 69
	inclusive_or_expression : exclusive_or_expression .  (96)
	exclusive_or_expression : exclusive_or_expression . '^' and_expression  (99)

	'^'  shift 127
	AND  reduce 96
	OR  reduce 96
	';'  reduce 96
	'}'  reduce 96
	':'  reduce 96
	')'  reduce 96
	','  reduce 96
	']'  reduce 96
	'?'  reduce 96
	'|'  reduce 96


state 70
	exclusive_or_expression : and_expression .  (98)
	and_expression : and_expression . '&' equality_expression  (101)

	'&'  shift 128
	AND  reduce 98
	OR  reduce 98
	';'  reduce 98
	'}'  reduce 98
	':'  reduce 98
	')'  reduce 98
	','  reduce 98
	']'  reduce 98
	'?'  reduce 98
	'|'  reduce 98
	'^'  reduce 98


state 71
	and_expression : equality_expression .  (100)
	equality_expression : equality_expression . EQUALS relational_expression  (103)
	equality_expression : equality_expression . NOT_EQUALS relational_expression  (104)

	EQUALS  shift 129
	NOT_EQUALS  shift 130
	AND  reduce 100
	OR  reduce 100
	';'  reduce 100
	'}'  reduce 100
	':'  reduce 100
	')'  reduce 100
	','  reduce 100
	']'  reduce 100
	'?'  reduce 100
	'|'  reduce 100
	'^'  reduce 100
	'&'  reduce 100


state 72
	equality_expression : relational_expression .  (102)
	relational_expression : relational_expression . '<' shift_expression  (106)
	relational_expression : relational_expression . '>' shift_expression  (107)
	relational_expression : relational_expression . LESS_OR_EQUAL shift_expression  (108)
	relational_expression : relational_expression . GREATER_OR_EQUAL shift_expression  (109)

	LESS_OR_EQUAL  shift 131
	GREATER_OR_EQUAL  shift 132
	'<'  shift 133
	'>'  shift 134
	EQUALS  reduce 102
	NOT_EQUALS  reduce 102
	AND  reduce 102
	OR  reduce 102
	';'  reduce 102
	'}'  reduce 102
	':'  reduce 102
	')'  reduce 102
	','  reduce 102
	']'  reduce 102
	'?'  reduce 102
	'|'  reduce 102
	'^'  reduce 102
	'&'  reduce 102


state 73
	relational_expression : shift_expression .  (105)
	shift_expression : shift_expression . LEFT_SHIFT additive_expression  (111)
	shift_expression : shift_expression . RIGHT_SHIFT additive_expression  (112)

	LEFT_SHIFT  shift 135
	RIGHT_SHIFT  shift 136
	LESS_OR_EQUAL  reduce 105
	GREATER_OR_EQUAL  reduce 105
	EQUALS  reduce 105
	NOT_EQUALS  reduce 105
	AND  reduce 105
	OR  reduce 105
	';'  reduce 105
	'}'  reduce 105
	':'  reduce 105
	')'  reduce 105
	','  reduce 105
	']'  reduce 105
	'?'  reduce 105
	'|'  reduce 105
	'^'  reduce 105
	'&'  reduce 105
	'<'  reduce 105
	'>'  reduce 105


state 74
	shift_expression : additive_expression .  (110)
	additive_expression : additive_expression . '+' multiplicative_expression  (114)
	additive_expression : additive_expression . '-' multiplicative_expression  (115)

	'+'  shift 137
	'-'  shift 138
	LEFT_SHIFT  reduce 110
	RIGHT_SHIFT  reduce 110
	LESS_OR_EQUAL  reduce 110
	GREATER_OR_EQUAL  reduce 110
	EQUALS  reduce 110
	NOT_EQUALS  reduce 110
	AND  reduce 110
	OR  reduce 110
	';'  reduce 110
	'}'  reduce 110
	':'  reduce 110
	')'  reduce 110
	','  reduce 110
	']'  reduce 110
	'?'  reduce 110
	'|'  reduce 110
	'^'  reduce 110
	'&'  reduce 110
	'<'  reduce 110
	'>'  reduce 110


state 75
	additive_expression : multiplicative_expression .  (113)
	multiplicative_expression : multiplicative_expression . '*' cast_expression  (117)
	multiplicative_expression : multiplicative_expression . '/' cast_expression  (118)
	multiplicative_expression : multiplicative_expression . '%' cast_expression  (119)

	'*'  shift 139
	'/'  shift 140
	'%'  shift 141
	LEFT_SHIFT  reduce 113
	RIGHT_SHIFT  reduce 113
	LESS_OR_EQUAL  reduce 113
	GREATER_OR_EQUAL  reduce 113
	EQUALS  reduce 113
	NOT_EQUALS  reduce 113
	AND  reduce 113
	OR  reduce 113
	'+'  reduce 113
	'-'  reduce 113
	';'  reduce 113
	'}'  reduce 113
	':'  reduce 113
	')'  reduce 113
	','  reduce 113
	']'  reduce 113
	'?'  reduce 113
	'|'  reduce 113
	'^'  reduce 113
	'&'  reduce 113
	'<'  reduce 113
	'>'  reduce 113


state 76
	assignment_expression : cast_expression . assignment_op assignment_expression  (87)
	multiplicative_expression : cast_expression .  (116)

	'='  shift 142
	LEFT_SHIFT  reduce 116
	RIGHT_SHIFT  reduce 116
	LESS_OR_EQUAL  reduce 116
	GREATER_OR_EQUAL  reduce 116
	EQUALS  reduce 116
	NOT_EQUALS  reduce 116
	AND  reduce 116
	OR  reduce 116
	'+'  reduce 116
	'-'  reduce 116
	'*'  reduce 116
	'/'  reduce 116
	'%'  reduce 116
	';'  reduce 116
	'}'  reduce 116
	':'  reduce 116
	')'  reduce 116
	','  reduce 116
	']'  reduce 116
	'?'  reduce 116
	'|'  reduce 116
	'^'  reduce 116
	'&'  reduce 116
	'<'  reduce 116
	'>'  reduce 116

	assignment_op  goto 143


state 77
	cast_expression : unary_expression .  (120)

	.  reduce 120


state 78
	unary_expression : unary_op_list . postfix_expression  (123)
	unary_op_list : unary_op_list . unary_op  (139)

	IDENT  shift 46
	INTEGER  shift 47
	FLOATING  shift 48
	CHARACTER  shift 49
	STRING  shift 50
	INC  shift 51
	DEC  shift 52
	'+'  shift 53
	'-'  shift 54
	'*'  shift 55
	'('  shift 144
	'&'  shift 58
	'~'  shift 59
	'!'  shift 60
	.  error

	unary_op  goto 145
	postfix_expression  goto 146
	primary_expression  goto 80


state 79
	unary_expression : postfix_expression .  (122)
	postfix_expression : postfix_expression . '(' ')'  (125)
	postfix_expression : postfix_expression . '(' argument_expression_list ')'  (126)
	postfix_expression : postfix_expression . INC  (127)
	postfix_expression : postfix_expression . DEC  (128)

	INC  shift 147
	DEC  shift 148
	'('  shift 149
	LEFT_SHIFT  reduce 122
	RIGHT_SHIFT  reduce 122
	LESS_OR_EQUAL  reduce 122
	GREATER_OR_EQUAL  reduce 122
	EQUALS  reduce 122
	NOT_EQUALS  reduce 122
	AND  reduce 122
	OR  reduce 122
	'='  reduce 122
	'+'  reduce 122
	'-'  reduce 122
	'*'  reduce 122
	'/'  reduce 122
	'%'  reduce 122
	';'  reduce 122
	'}'  reduce 122
	':'  reduce 122
	')'  reduce 122
	','  reduce 122
	']'  reduce 122
	'?'  reduce 122
	'|'  reduce 122
	'^'  reduce 122
	'&'  reduce 122
	'<'  reduce 122
	'>'  reduce 122


state 80
	postfix_expression : primary_expression .  (124)
	primary_expression : primary_expression . '[' expression ']'  (133)

	'['  shift 150
	LEFT_SHIFT  reduce 124
	RIGHT_SHIFT  reduce 124
	LESS_OR_EQUAL  reduce 124
	GREATER_OR_EQUAL  reduce 124
	EQUALS  reduce 124
	NOT_EQUALS  reduce 124
	INC  reduce 124
	DEC  reduce 124
	AND  reduce 124
	OR  reduce 124
	'='  reduce 124
	'+'  reduce 124
	'-'  reduce 124
	'*'  reduce 124
	'/'  reduce 124
	'%'  reduce 124
	';'  reduce 124
	'}'  reduce 124
	':'  reduce 124
	'('  reduce 124
	')'  reduce 124
	','  reduce 124
	']'  reduce 124
	'?'  reduce 124
	'|'  reduce 124
	'^'  reduce 124
	'&'  reduce 124
	'<'  reduce 124
	'>'  reduce 124


state 81
	selection_stmt : IF . '(' expression ')' compound_stmt  (33)
	selection_stmt : IF . '(' expression ')' compound_stmt ELSE compound_stmt  (34)

	'('  shift 151
	.  error


state 82
	selection_stmt : SWITCH . '(' expression ')' switch_clauses  (35)

	'('  shift 152
	.  error


state 83
	iteration_stmt : DO . stmt WHILE '(' expression ')' ';'  (39)

	IDENT  shift 46
	INTEGER  shift 47
	FLOATING  shift 48
	CHARACTER  shift 49
	STRING  shift 50
	INC  shift 51
	DEC  shift 52
	IF  shift 81
	SWITCH  shift 82
	DO  shift 83
	WHILE  shift 84
	FOR  shift 85
	RETURN  shift 86
	BREAK  shift 87
	CONTINUE  shift 88
	'+'  shift 53
	'-'  shift 54
	'*'  shift 55
	';'  shift 89
	'{'  shift 30
	'('  shift 56
	'&'  shift 58
	'~'  shift 59
	'!'  shift 60
	.  error

	unary_op  goto 61
	stmt  goto 153
	compound_stmt  goto 93
	expression_stmt  goto 94
	selection_stmt  goto 95
	iteration_stmt  goto 96
	jump_stmt  goto 97
	expression  goto 99
	assignment_expression  goto 63
	constant_expression  goto 64
	conditional_expression  goto 65
	logical_or_expression  goto 66
	logical_and_expression  goto 67
	inclusive_or_expression  goto 68
	exclusive_or_expression  goto 69
	and_expression  goto 70
	equality_expression  goto 71
	relational_expression  goto 72
	shift_expression  goto 73
	additive_expression  goto 74
	multiplicative_expression  goto 75
	cast_expression  goto 76
	unary_expression  goto 77
	unary_op_list  goto 78
	postfix_expression  goto 79
	primary_expression  goto 80


state 84
	iteration_stmt : WHILE . '(' expression ')' stmt  (38)

	'('  shift 154
	.  error

